--- a/app/components/users/login.html
+++ b/app/components/users/login.html
@@ -1,41 +1,83 @@
-<md-dialog ng-cloak>
-  <form>
-    <md-toolbar style="background-color: rgb(140, 64, 41);">
+<md-dialog style="width: 45%" ng-cloak md-is-locked-open="isLockedOpen()">
+  <form name="registerForm">
+    <md-toolbar style="background-color:rgb(91, 104, 202);">
       <div class="md-toolbar-tools">
-        <h2>Log In</h2>
+        <h2>Register</h2>
         <span flex></span>
       </div>
     </md-toolbar>
-    </div>
+    
     <div layout="column" layout-padding ng-cloak>
       <br/>
       <md-content class="autoScroll">
+
+        <md-input-container class="md-icon-float md-block">
+          <input ng-model="user.firstname" type="text" placeholder="First Name" ng-required="true">
+        </md-input-container>
+
+        <md-input-container class="md-icon-float md-block">
+          <input ng-model="user.lastname" type="text" placeholder="Last Name" ng-required="true">
+        </md-input-container>
+        
         <md-input-container class="md-icon-float md-block">
           <input ng-model="user.email" type="email" placeholder="Email" ng-required="true">
         </md-input-container>
-
+        
         <md-input-container class="md-icon-float md-block">
           <input ng-model="user.password" type="password" placeholder="Password" ng-required="true">
         </md-input-container>
-				
-				<md-input-container class="md-icon-float md-block">
-           <input ng-model="user.email" type="email" placeholder="Email" ng-required="true">
-        </md-input-container>
-          
-        <md-input-container class="md-icon-float md-block">
-        	 <input ng-model="user.password" type="password" placeholder="Password" ng-required="true">
-      	</md-input-container>
 
-     </md-content>
+        <md-input-container class="md-icon-float md-block">
+          <input ng-model="user.password_confirmation" type="password" placeholder="Confirm Password" ng-required="true">
+        </md-input-container>
+
+        <md-input-container class="md-icon-float md-block">
+          <input ng-model="user.phone" type="tel" placeholder="Phone Number" ng-required="true">
+        </md-input-container>
+        
+        
+        <div layout="column">
+          <md-menu>
+            <md-button style="min-width: 100%;background: rgb(91, 104, 202);color:white;" aria-label="Open demo menu" class="md-raised" ng-click="$mdOpenMenu($event)">
+              {{chooseYourUniversity}}
+            </md-button>
+            <md-menu-content width="10">
+              <md-menu-item ng-repeat="item in universities">
+                <md-button ng-click="university($index)">
+                  {{item}}
+                </md-button>
+              </md-menu-item>
+            </md-menu-content>
+          </md-menu>
+        </div>
+
+        
+        <div layout="column">
+          <md-menu>
+            <md-button style="min-width: 100%;background-color: rgb(91, 104, 202);color:white;" aria-label="Open demo menu" class="md-raised" ng-click="$mdOpenMenu($event)">
+              {{program}}
+            </md-button>
+            <md-menu-content width="10">
+              <md-menu-item ng-repeat="item in programs">
+                <md-button ng-click="chooseProgram($index)">
+                  {{item}}
+                </md-button>
+              </md-menu-item>
+            </md-menu-content>
+          </md-menu>
+        </div>
+
+        
+      </md-content>
     </div>
+
     <md-divider md-inset style="margin-left: 0; margin-top: 5%"></md-divider>
-    <md-dialog-actions layout="row">
+
+    <md-dialog-actions layout="row" layout-align="center" style="align-self: center;">
       <span flex></span>
-      <md-button class="md-raised" ng-click="answer('not useful')" style="color: green">
-        login
-      </md-button>
-      <md-button class="md-raised" ng-click="answer('useful')" style="margin-right:20px;">
-        register
+      <md-button class="md-raised" ng-click="register()" type="submit" ng-disabled="registerForm.$invalid || program === 'program'" style="margin-right:20px;">
+        <span ng-hide="load">Register</span>
+        <md-progress-circular ng-show="load" md-diameter="20px" style="margin-left: -20px;"></md-progress-circular>
       </md-button>
     </md-dialog-actions>
   </form>
